--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation("jakarta.validation:jakarta.validation-api:4.0.0-M1")
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 
     compileOnly 'org.projectlombok:lombok'
