--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,38 +1,16 @@
-spring.application.name=spring-security
+spring.application.name=comment-service
 
-# ===============================
-# H2 DATABASE CONFIG
-# ===============================
-
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#
-## ===============================
-## H2 CONSOLE
-## ===============================
-#
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-
-spring.datasource.url=jdbc:mysql://localhost:3306/comments_db
-spring.datasource.username=appuser
-spring.datasource.password=apppass
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
 
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
-
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
