--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -79,6 +79,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
+          port: 22
           script: |
             cd /home/ubuntu/comment_system
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/comment_system-app:latest
