--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -2,9 +2,9 @@ name: CI-CD Comments System
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build-and-deploy:
@@ -76,13 +76,19 @@ jobs:
       - name: Deploy to EC2 via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
-            host: ${{ secrets.EC2_HOST }}
-            username: ${{ secrets.EC2_USER }}
-            key: ${{ secrets.EC2_SSH_KEY }}
-            port: 22
-            script: |
-                cd /home/ubuntu/comment_system
-                docker pull ${{ secrets.DOCKERHUB_USERNAME }}/comment_system-app:latest
-                docker-compose down
-                docker-compose up -d
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          port: 22
+          command_timeout: 30m
+          script: |
+            set -e
+            cd /home/ubuntu/comment_system
 
+            echo "Pulling latest images..."
+            docker-compose pull
+
+            echo "Starting services..."
+            docker-compose up -d
+
+            echo "Deployment completed successfully"
